# ltb-gvs

./: .travis.yml  CMakeLists.txt  README.md
cmake/: BoostUuidLibs.cmake  ThirdParty.cmake  ThirdPartyCore.cmake  ThirdPartyCuda.cmake  ThirdPartyDisplay.cmake  ThirdPartyGraphics.cmake  ThirdPartyGui.cmake  ThirdPartyNetworking.cmake
examples/: CMakeLists.txt  resources.conf
examples/chat_room/: example_client.cpp  example_server.cpp  example_server.hpp  example_service.hpp  main.cpp
examples/common/: test_scene.cpp  test_scene.hpp
examples/cpp11_client/: main.cpp
examples/display_window/: main.cpp
examples/intersection/: main_window.cpp  main_window.hpp
examples/primitives/: main_window.cpp  main_window.hpp
examples/scene/: example_renderable.cpp  example_renderable.hpp  main_window.cpp  main_window.hpp
examples/shaders/: general_shader.cpp  general_shader.frag  general_shader.hpp  general_shader.vert
examples/tmp_demo/: main.cpp
ltb-util/: CMakeLists.txt
ltb-util/cmake/: ThirdParty.cmake
src/: gvs_cuda_includes.hpp.in  gvs_paths.hpp.in  resources.conf
src/ltb/cuda/: buffer_map_guard.hpp  gl_buffer.cu  gl_buffer.h  gl_buffer.hpp  gl_buffer_image.cu  gl_buffer_image.h  gl_buffer_image.hpp  scoped_gl_context.cpp  scoped_gl_context.h
src/ltb/cuda/optix/: optix.cpp  optix.cu  optix.cu.old  optix.hpp  optix.hpp.old  tmp_params.hpp
src/ltb/gvs/: forward_declarations.hpp
src/ltb/gvs/core/: custom_renderable.hpp  forward_declarations.hpp  nil_scene.cpp  nil_scene.hpp  param_checkers.hpp  param_getters.hpp  param_setters.hpp  primitive_types.hpp  scene.cpp  scene.hpp  scene_id.cpp  scene_id.hpp  scene_update_handler.cpp  scene_update_handler.hpp  self_deleting_scene_id.cpp  types.hpp
src/ltb/gvs/display/: camera_package.cpp  camera_package.hpp  display_scene.cpp  display_scene.hpp  display_window.cpp  display_window.hpp  forward_declarations.hpp  local_scene.cpp  local_scene.hpp  magnum_conversions.cpp  magnum_conversions.hpp  make_primitive.cpp  make_primitive.hpp  scene_core.cpp  scene_core.hpp  scene_display.hpp  scene_info_helpers.cpp  scene_info_helpers.hpp  scene_update_func.hpp  scene_util.cpp  scene_util.hpp
src/ltb/gvs/display/backends/: display_backend.hpp  drawables.cpp  drawables.hpp  empty_backend.cpp  empty_backend.hpp  general_shader_3d.cpp  general_shader_3d.hpp  opengl_backend.cpp  opengl_backend.hpp  opengl_renderable.hpp
src/ltb/gvs/display/gui/: error_alert.cpp  error_alert.hpp  error_alert_recorder.cpp  error_alert_recorder.hpp  imgui_magnum_application.cpp  imgui_magnum_application.hpp  imgui_theme.cpp  imgui_theme.hpp  imgui_utils.cpp  imgui_utils.hpp  scene_gui.cpp  scene_gui.hpp  settings.cpp  settings.hpp
src/ltb/gvs/display/shaders/: box_shader.geom  texture_shader.vert
src/ltb/gvs/util11/: result_11.hpp
src/ltb/testing/gvs/: scoped_gl_context.hpp
